fix pulldown toggler on mobile

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -142,6 +142,7 @@
         width: 100%;
         height: 0;
         top: 0;
+        z-index: 1100;
     }
     .hidden-collapsed {
         display: inline;
